# fairness-aware-gpt2

./: .gitignore  NEXT_STEPS.md  README.md  SETUP.md  evaluate.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
notebooks/: reeval_qqp_kaggle.ipynb  train_all_qqp_kaggle.ipynb  train_qqp_colab.ipynb  train_qqp_kaggle.ipynb  train_qqp_kaggle_batch.ipynb
results/: results.json
results/reproduced/: baseline.json  cda.json  cda_reg.json
scripts/: download_data.py  eval_checkpoint.py  push_to_hub.py
src/fairness_gpt2/: __init__.py  data.py  evaluate.py  identity.py  model.py  results.py  train.py  train_sentiment.py  train_sonnet.py
tests/: test_identity.py  test_metrics.py  test_tasks.py
